# src/routes.ts
@@ -1,148 +1,6 @@
-/* tslint:disable */
-import { Controller, ValidationService, FieldErrors, ValidateError, TsoaRoute } from 'tsoa';
-import { HotelController } from './controllers/hotels/controller';
-import * as express from 'express';
+import { Application } from 'express';
+import hotelsRouter from './api/controllers/hotels/routes';
 
-const models: TsoaRoute.Models = {
-    "HotelModel": {
-        "properties": {
-            "id": { "dataType": "string", "required": true },
-            "name": { "dataType": "string", "required": true },
-            "stars": { "dataType": "double", "required": true },
-            "price": { "dataType": "double", "required": true },
-            "image": { "dataType": "string", "required": true },
-            "amenities": { "dataType": "array", "array": { "dataType": "string" }, "default": [] },
-        },
-    },
+export default function routes(app: Application): void {
+    app.use('/api/v1/hotels', hotelsRouter);
 };
-const validationService = new ValidationService(models);
-
-export function RegisterRoutes(app: express.Express) {
-    app.get('/api/v1/hotels',
-        function(request: any, response: any, next: any) {
-            const args = {
-            };
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = getValidatedArgs(args, request);
-            } catch (err) {
-                return next(err);
-            }
-
-            const controller = new HotelController();
-
-
-            const promise = controller.getAll.apply(controller, validatedArgs as any);
-            promiseHandler(controller, promise, response, next);
-        });
-    app.get('/api/v1/hotels/:id',
-        function(request: any, response: any, next: any) {
-            const args = {
-                id: { "in": "path", "name": "id", "required": true, "dataType": "string" },
-            };
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = getValidatedArgs(args, request);
-            } catch (err) {
-                return next(err);
-            }
-
-            const controller = new HotelController();
-
-
-            const promise = controller.getById.apply(controller, validatedArgs as any);
-            promiseHandler(controller, promise, response, next);
-        });
-    app.post('/api/v1/hotels',
-        function(request: any, response: any, next: any) {
-            const args = {
-                hotel: { "in": "body-prop", "name": "hotel", "required": true, "ref": "HotelModel" },
-            };
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = getValidatedArgs(args, request);
-            } catch (err) {
-                return next(err);
-            }
-
-            const controller = new HotelController();
-
-
-            const promise = controller.add.apply(controller, validatedArgs as any);
-            promiseHandler(controller, promise, response, next);
-        });
-    app.delete('/api/v1/hotels/:id',
-        function(request: any, response: any, next: any) {
-            const args = {
-                id: { "in": "path", "name": "id", "required": true, "dataType": "string" },
-            };
-
-            let validatedArgs: any[] = [];
-            try {
-                validatedArgs = getValidatedArgs(args, request);
-            } catch (err) {
-                return next(err);
-            }
-
-            const controller = new HotelController();
-
-
-            const promise = controller.remove.apply(controller, validatedArgs as any);
-            promiseHandler(controller, promise, response, next);
-        });
-
-
-    function isController(object: any): object is Controller {
-        return 'getHeaders' in object && 'getStatus' in object && 'setStatus' in object;
-    }
-
-    function promiseHandler(controllerObj: any, promise: any, response: any, next: any) {
-        return Promise.resolve(promise)
-            .then((data: any) => {
-                let statusCode;
-                if (isController(controllerObj)) {
-                    const headers = controllerObj.getHeaders();
-                    Object.keys(headers).forEach((name: string) => {
-                        response.set(name, headers[name]);
-                    });
-
-                    statusCode = controllerObj.getStatus();
-                }
-
-                if (data || data === false) { // === false allows boolean result
-                    response.status(statusCode || 200).json(data);
-                } else {
-                    response.status(statusCode || 204).end();
-                }
-            })
-            .catch((error: any) => next(error));
-    }
-
-    function getValidatedArgs(args: any, request: any): any[] {
-        const fieldErrors: FieldErrors = {};
-        const values = Object.keys(args).map((key) => {
-            const name = args[key].name;
-            switch (args[key].in) {
-                case 'request':
-                    return request;
-                case 'query':
-                    return validationService.ValidateParam(args[key], request.query[name], name, fieldErrors);
-                case 'path':
-                    return validationService.ValidateParam(args[key], request.params[name], name, fieldErrors);
-                case 'header':
-                    return validationService.ValidateParam(args[key], request.header(name), name, fieldErrors);
-                case 'body':
-                    return validationService.ValidateParam(args[key], request.body, name, fieldErrors, name + '.');
-                case 'body-prop':
-                    return validationService.ValidateParam(args[key], request.body[name], name, fieldErrors, 'body.');
-            }
-        });
-        if (Object.keys(fieldErrors).length > 0) {
-            throw new ValidateError(fieldErrors, '');
-        }
-        return values;
-    }
-}
